change buttons visibility base on the stopwatch state

--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ main {
 }
 
 #button-list {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-auto-flow: column;
     align-items: center;
     column-gap: 2rem;
     list-style: none;
@@ -71,7 +71,7 @@ main {
     border: none;
     border-radius: 0.35rem;
     font-size: 1rem;
-    padding: 10px 20px;
+    padding: 20px 20px;
     width: 100%;
     transition: all 0.1s ease;
 }
